--- a/css/footer.css
+++ b/css/footer.css
@@ -14,7 +14,7 @@
 }
 
 .footer-left {
-  justify-content: end;
+  justify-content: flex-start;
 }
 
 .footer-links li {
@@ -62,6 +62,7 @@
 
 .phone {
   font-weight: 600;
+  font-size: 1.2rem;
 }
 
 .social {
