--- a/css/footer.css
+++ b/css/footer.css
@@ -74,6 +74,15 @@
   border-radius: 50%;
 }
 
+.linkedin-icon:before,
+.facebook-icon:before,
+.instagram-icon:before,
+.github-icon:before,
+.spotify-icon:before {
+  display: none;
+  content: url(../images/ico-linkedin-red.svg) url(../images/ico-facebook-red.svg) url(../images/ico-instagram-red.svg) url(../images/ico-github-red.svg) url(../images/ico-spotify-red.svg);
+}
+
 .linkedin-icon:hover {
   content: url(../images/ico-linkedin-red.svg);
 }
