update social icons

--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,15 @@ body {
   align-items: center;
 }
 
+.linkedin-icon:before,
+.facebook-icon:before,
+.instagram-icon:before,
+.github-icon:before,
+.spotify-icon:before {
+  display: none;
+  content: url(../images/ico-linkedin-red.svg) url(../images/ico-facebook-red.svg) url(../images/ico-instagram-red.svg) url(../images/ico-github-red.svg) url(../images/ico-spotify-red.svg);
+}
+
 .header {
   width: 100%;
   height: 150px;
