--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -34,6 +34,9 @@
   .footer-container {
     width: 100vw;
   }
+  #phone, #mail, #weblink {
+    width: 100vw;
+  }
 }
 @media (max-width: 600px) {
   .header-left {
@@ -56,6 +59,9 @@
     width: 100vw;
     overflow-x: hidden;
     margin-top: 0.2em;
+  }
+  .footer-center {
+    max-width: 100%;
   }
   .social {
     gap: 0.5em;
