--- a/css/styles.css
+++ b/css/styles.css
@@ -146,6 +146,7 @@ body {
   cursor: pointer;
   box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.25);
   color: var(--color-black);
+  background-color: var(--color-white);
   font-size: 1.95rem;
 }
 
