--- a/css/carousel.css
+++ b/css/carousel.css
@@ -63,6 +63,7 @@
 
 .button-project1 {
   background-color: var(--color-yellow-gamehub);
+  color: var(--color-black);
 }
 
 .button-project2 {
@@ -87,9 +88,10 @@
   border: none;
 }
 .button:hover {
-  color: var(--color-text-dark);
   cursor: pointer;
-  box-shadow: inset 0px 2px 3px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 0px 2px 3px rgba(0, 0, 0, 0.45);
+  color: var(--color-text-dark);
+  background-color: var(--color-bg-button-hover);
 }
 
 .project-image-carousel {
@@ -115,6 +117,7 @@
   overflow: hidden;
   border-radius: var(--border-radius-12px);
   margin: 1em auto;
+  box-shadow: 4px 4px 14px 3px rgba(0, 0, 0, 0.45);
 }
 
 .carousel-images {
