--- a/css/styles.css
+++ b/css/styles.css
@@ -223,13 +223,13 @@ body {
   justify-content: center;
   align-items: flex-start;
   padding: 0.4em;
-  top: 100px;
-  right: -300px;
+  right: 30px;
+  top: -150%;
   width: 300px;
   height: auto;
   background-color: var(--color-icons);
   border-radius: var(--border-radius-6px);
-  transition: right 0.3s ease-in-out;
+  transition: top 0.3s ease-in-out;
 }
 
 .fly-in-item {
