--- a/css/styles.css
+++ b/css/styles.css
@@ -219,6 +219,14 @@ body {
   animation: nudge-animation 2s infinite alternate;
 }
 
+@keyframes nudge-animation {
+  0%, 100% {
+    transform: translateX(0);
+  }
+  16.67%, 50%, 83.33% {
+    transform: translateX(10px);
+  }
+}
 .fly-in-menu {
   display: flex;
   position: fixed;
@@ -258,6 +266,23 @@ body {
   color: var(--color-active);
 }
 
+.project-toggle {
+  width: 100%;
+  padding: 0.4em 1em;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+
+.project-toggle::after {
+  content: ">";
+  position: relative;
+  color: var(--color-white);
+  height: 16px;
+  width: 16px;
+  align-items: center;
+  right: -10px;
+}
+
 .fly-in-item:hover::after {
   content: url(../images/ico-star-three-points-outline.svg);
   position: relative;
@@ -272,6 +297,12 @@ body {
 }
 
 .project-list {
+  display: none;
+}
+
+.project-list.show {
+  transition: all 0.3s ease-in-out;
+  display: block;
   max-width: 100%;
   margin: 0.8em 0 1.6em 0;
   font-size: 1.4rem;
@@ -294,17 +325,4 @@ body {
   color: var(--color-text-dark);
   background-color: var(--color-white);
   cursor: default;
-}
-
-main {
-  min-height: 50vh;
-}
-
-@keyframes nudge-animation {
-  0%, 100% {
-    transform: translateX(0);
-  }
-  16.67%, 50%, 83.33% {
-    transform: translateX(10px);
-  }
 }/*# sourceMappingURL=styles.css.map */
