--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -64,6 +64,17 @@
     padding-left: 10px;
     font-size: 1.4rem;
   }
+  .about-me-card {
+    flex-direction: column;
+    align-items: center;
+  }
+  .about-me-card .about-right {
+    width: 100%;
+    margin: 0;
+  }
+  .about-shortcuts {
+    font-size: 1.1rem;
+  }
   .footer-container {
     width: 100vw;
   }
