update with JS2 / project 4

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -81,8 +81,8 @@
 }
 
 .button-project4 {
-  color: var(--color-white);
-  background-color: var(--color-burgundy-chefs-table);
+  color: var(--color-black);
+  background-color: var(--color-yellow-gamehub);
 }
 
 .button {
