--- a/css/carousel.scss
+++ b/css/carousel.scss
@@ -80,8 +80,8 @@
   background-color: var(--color-burgundy-chefs-table);
 }
 .button-project4 {
-  color: var(--color-white);
-  background-color: var(--color-burgundy-chefs-table);
+  color: var(--color-black);
+  background-color: var(--color-yellow-gamehub);
 }
 
 .button {
