--- a/css/styles.scss
+++ b/css/styles.scss
@@ -232,11 +232,11 @@ body {
   align-items: center;
   font-weight: 600;
   width: 100%;
-  margin: 0.5em 0 0 0.5em;;
+  margin: 0 0 0 0.5em;;
 }
 
 .arrow-big {
-  margin-left: 1em;
+  margin-left: 0.3em;
   max-height: 70%;
   align-items: center;
   height: 36px;
@@ -348,7 +348,10 @@ body {
 
 .weblink, .phone, .mail {
   transition: all 0.3s ease-in-out;
-  width: 320px;
+  width: 340px;
+  max-width: 110%;
+  align-items: center;
+  // margin-top: 0.5em;
   &:hover {
       box-shadow: var(--box-shadow-buttons);
       border-radius: var(--border-radius-12px);
