Adds dreambids images to slider

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -33,6 +33,8 @@
   --color-yellow-gamehub: #F5C618;
   --color-burgundy-chefs-table: #5e0a24;
   --color-blue-csm: #0052bd;
+  --color-secondary-dreambids: #1572b9;
+  --color-white-dreambids: #FFFFFF;
 
   --font-family-koho: 'KoHo', sans-serif;
   --font-family-inter: 'Inter', sans-serif;
