--- a/css/carousel.scss
+++ b/css/carousel.scss
@@ -83,6 +83,10 @@
   color: var(--color-black);
   background-color: var(--color-yellow-gamehub);
 }
+.button-project5 {
+  color: var(--color-white-dreambids);
+  background-color: var(--color-secondary-dreambids);
+}
 
 .button {
   justify-content: center;
