--- a/css/styles_20231222082836.css
+++ b/css/styles_20231222082836.css
@@ -366,4 +366,4 @@ body {
   color: var(--color-text-dark);
   background-color: var(--color-white);
   cursor: default;
-}/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=styles_20231222082836.css.map */
