--- a/css/styles.scss
+++ b/css/styles.scss
@@ -119,7 +119,8 @@ body {
  .header-left {
   width: 40%;
   height: 100%;
-  background-image: url(../images/logo-header-full.svg);
+  background-image: url(../images/rundev-logo-in-brackets.svg);
+  // background-image: url(../images/logo-header-full.svg);
   background-repeat: no-repeat;
   background-size: contain;
 }
