--- a/css/styles_20231219110515.css
+++ b/css/styles_20231219110515.css
@@ -30,7 +30,6 @@
   --color-burgundy-chefs-table: #5e0a24;
   --color-blue-csm: #0052bd;
   --color-secondary-dreambids: #1572b9;
-  --color-white-dreambids: #FFFFFF;
   --font-family-koho: "KoHo", sans-serif;
   --font-family-inter: "Inter", sans-serif;
 }
@@ -115,7 +114,7 @@ body {
 .header-left {
   width: 40%;
   height: 100%;
-  background-image: url(../images/rundev-logo-in-brackets.svg);
+  background-image: url(../images/logo-header-full.svg);
   background-repeat: no-repeat;
   background-size: contain;
 }
@@ -366,4 +365,4 @@ body {
   color: var(--color-text-dark);
   background-color: var(--color-white);
   cursor: default;
-}/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=styles_20231219110515.css.map */
