Adds cv to footer

--- a/css/footer.scss
+++ b/css/footer.scss
@@ -69,7 +69,7 @@
   }
 }
 
-#phone, #mail, #weblink {
+#phone, #mail, #weblink, #cv {
   display: flex;
   justify-content: center;
   align-items: center;
