--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -88,7 +88,7 @@
   .footer-container {
     width: 100vw;
   }
-  #phone, #mail, #weblink {
+  #phone, #mail, #weblink, #cv {
     width: 100vw;
   }
   .project-description {
