--- a/css/media-queries.scss
+++ b/css/media-queries.scss
@@ -94,7 +94,7 @@
   .footer-container {
     width: 100vw;
   }
-  #phone, #mail, #weblink {
+  #phone, #mail, #weblink, #cv {
     width: 100vw;
   }
 
