--- a/css/footer.css
+++ b/css/footer.css
@@ -64,7 +64,7 @@
   width: 300px;
 }
 
-#phone, #mail, #weblink {
+#phone, #mail, #weblink, #cv {
   display: flex;
   justify-content: center;
   align-items: center;
