Adds new cards content to js

--- a/css/carousel.scss
+++ b/css/carousel.scss
@@ -156,6 +156,18 @@
 .project3-images {
   background-image: url(../images/chefs-table/ct-1.jpg);
  }
+.project4-images {
+  background-image: url(../images/movietalk/mt-1.png);
+ }
+.project5-images {
+  background-image: url(../images/dreambids/db-1.png);
+ }
+.project6-images {
+  background-image: url(../images/cgg/cgg-1.png);
+ }
+.project7-images {
+  background-image: url(../images/holidaze/hd-01.png);
+ }
 
 .projects-carousel-nav {
   max-width: 100%;
