--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@
   --color-blue-csm: #0052bd;
   --color-secondary-dreambids: #1572b9;
   --color-white-dreambids: #FFFFFF;
-  --color-secondary-purple-cgg: rgb(128, 0, 145);
+  --color-secondary-cgg: rgb(128, 0, 145);
   --color-white-cgg: #FFFFFF;
   --color-secondary-holidaze: rgb(125, 211, 252);
   --color-black-holidaze: #000000;
