--- a/css/footer.css
+++ b/css/footer.css
@@ -12,6 +12,9 @@
   justify-content: flex-start;
   font-weight: 500;
 }
+.footer-right {
+  max-height: 250px;
+}
 
 .footer-left {
   justify-content: flex-start;
