--- a/css/footer.scss
+++ b/css/footer.scss
@@ -2,6 +2,7 @@
   color: var(--color-text-dark);
   background-color: var(--color-bg-intro);
   flex-wrap: wrap;
+  height: auto !important;
 }
 
 .footer-left, .footer-center, .footer-right {
