--- a/css/styles.css
+++ b/css/styles.css
@@ -215,7 +215,7 @@ body {
   height: 100%;
   width: 15%;
   background-position: top center;
-  background-image: url(../images/image-rune-bw.png);
+  background-image: url(../images/rune-profile-pic-medium.png);
   background-repeat: no-repeat;
   background-size: contain;
   border-radius: var(--border-radius-12px);
